src/test/ui/exclusive-range/exclusive_range_pattern_syntax_collision3.stderr
error: `..X` range patterns are not supported
  --> $DIR/exclusive_range_pattern_syntax_collision3.rs:5:10
   |
LL |         [..9, 99..100, _] => {},
   |          ^^^ help: try using the minimum value for the type: `MIN..9`

error[E0308]: mismatched types
  --> $DIR/exclusive_range_pattern_syntax_collision3.rs:5:10
   |
LL |     match [5..4, 99..105, 43..44] {
   |           ----------------------- this match expression has type `std::ops::Range<{integer}>`
LL |         [..9, 99..100, _] => {},
   |          ^^^ expected struct `std::ops::Range`, found integer
   |
   = note: expected type `std::ops::Range<{integer}>`
              found type `{integer}`

error[E0308]: mismatched types
  --> $DIR/exclusive_range_pattern_syntax_collision3.rs:5:15
   |
LL |     match [5..4, 99..105, 43..44] {
   |           ----------------------- this match expression has type `std::ops::Range<{integer}>`
LL |         [..9, 99..100, _] => {},
   |               ^^^^^^^ expected struct `std::ops::Range`, found integer
   |
   = note: expected type `std::ops::Range<{integer}>`
              found type `{integer}`

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0308`.
